--- a/01_HTML/01Introduction.html
+++ b/01_HTML/01Introduction.html
@@ -2,26 +2,37 @@
 <!--This is comment-->
 <!-- shortcut for comments: ctrl + /  -->
 <html lang="en">
-
-<head>
+  <head>
     <!-- meta tags are used for SEO -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="This is our description">
-    <meta name="keywords" content="html, html tutorials, html course">
-    <meta name="robots" content="INDEX, FOLLOW">
+    <!-- defines meta data about HTML doc  -->
+    <!-- always go inside head tag  -->
+    <!-- used to specify: character set, viewport, keyword, author, page description etc  -->
+    <meta charset="UTF-8" />
+    <!-- character encoding. 90% websites use this  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- initial_scale = 1.0 -> initial zoom level when a webpage is first loaded on a mobile device. 
+     viewpoert means visible screen. -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="This is our description" />
+    <meta name="keywords" content="html, html tutorials, html course" />
+    <meta name="robots" content="INDEX, FOLLOW" />
     <!-- NOINDEX, NOFOLLOW if you don't want site to index in google search result -->
 
     <!--  include external css -->
-    <link rel="stylesheet" href="first.css">
+    <link rel="stylesheet" href="first.css" />
     <!--  include javascript -->
     <script src="first.js"></script>
     <title>Introduction To Web Development</title>
-</head>
+  </head>
 
-<body>
-    This is just the beginning.
-</body>
-
+  <body>
+    <p>HTML: - basic building block. Description of web page</p>
+    <p>CSS: - formatting / appearance / beauty</p>
+    <p>Javascript: - Functionality</p>
+    <p>Tags: Tells the browser how to render different elements.</p>
+    <p>
+      Tags has 4 element: opening tag,ending tag, content, and the entire part
+      is called element.
+    </p>
+  </body>
 </html>
