--- a/01_HTML/03linkImage.html
+++ b/01_HTML/03linkImage.html
@@ -1,79 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Links & Images</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!-- 3 types of links can be used  -->
     <!-- 1. file in the same folder (relative path).  -->
     <!-- 2. moving into the folder  -->
     <!-- 3. moving out of the folder  -->
 
-
-
     <!-- target="_blank" is used to open new tab on window -->
     <!-- if space is used after blank,only one new tab is opened. do not use space. -->
 
     <!-- these are absolute path  -->
-    <a href="https://www.google.com" target="_blank">Go to google</a><br>
-    <a href="https://www.twitter.com" target="_blank">Go to twitter</a><br>
-    <a href="https://www.facebook.com" target="_blank">Go to facebook</a><br>
-    <a href="https://www.linkedin.com" target="_blank">Go to linkedin</a><br>
-    <hr>
-
+    <a href="https://www.google.com" target="_blank">Go to google</a><br />
+    <a href="https://www.twitter.com" target="_blank">Go to twitter</a><br />
+    <a href="https://www.facebook.com" target="_blank">Go to facebook</a><br />
+    <a href="https://www.linkedin.com" target="_blank">Go to linkedin</a><br />
+    <hr />
 
     <!-- linking other html file to this file -->
     <!-- file in the same folder  -->
     <!-- just write down the file name on the a tag  -->
-    <a href="5_heading_paragraph.html" target="_blank">tutorial5</a><br>
+    <a href="05inlineBlockElements.html" target="_blank">tutorial5</a><br />
 
     <!-- now will see file out of the folder  -->
     <!-- use /folder_name/filename  -->
-    <br>
-    <img src="/IMG_3550.JPG" alt="" width="200 " height="300">Hi, I am Ualiur Rahat. <br><br><br>
+    <br />
+    <img src="/IMG_3550.JPG" alt="" width="200 " height="300" /> <br />
+    Hi, I am Ualiur Rahat. <br /><br /><br />
 
     <!-- now will use file out of the folder  -->
     <!-- use ../ for each folder  -->
-    <a href="../../C/1.c">C programming file 1.c</a><br><br><br>
-    <hr>
+    <!-- <a href="../../C/1.c">C programming file 1.c</a><br /><br /><br />
+    <hr /> -->
 
     <!-- mail link ....  -->
-    <a href="mailto:www.rahatiitian@gmail.com">email me</a><br>
+    <a href="mailto:www.rahatiitian@gmail.com">email me</a><br />
     <!-- skype link....  -->
-    <a href="skype:www.rahatiitian@gmail.com">Call me on Skype</a> <br>
+    <a href="skype:www.rahatiitian@gmail.com">Call me on Skype</a> <br />
     <!-- mobile number link ....  -->
     <a href="tel:+8801876593551"> call me on my mobile</a>
-    <hr>
-
+    <hr />
 
     <!-- the image can't be loaded, hence showing alt text -->
     <!-- if your image is in offline , then it has to be in the same folder where the html file is written -->
-    <img src="rahat.jpg" alt="error loading image"><br><br><br><br>
+    <img src="rahat.jpg" alt="error loading image" /><br /><br /><br /><br />
 
-    <!-- now taking image from source.unsplash site -->
-    <img src="https://source.unsplash.com/600x900/?nature" alt="image couldn't load"><br>
-
+    <!-- now taking image from online site -->
     <!-- you can add height and width with html tag just like here...showing 250*100 instead of 1200 * 900  -->
-    <img src="https://source.unsplash.com/1200x900/?nature" alt="image couldn't load" width="250" height="100"><br>
-    <!-- setting width and height using html isn't standard. gonna use CSS in future -->
-    <!-- the height and wide feature is a service provided by source unsplash. this is not an html property  -->
-    <br><br><br>
-    <hr>
-    <br>
+    <!-- setting width and height using html isn't standard. We will use CSS in future -->
+    <img
+      src="https://media.istockphoto.com/id/2054864236/photo/stunning-sunset-sky-over-colorado-highway-with-san-juan-mountains.jpg?s=2048x2048&w=is&k=20&c=p0dVGigCsivbY-mukmztlcIV0eIzuGhW6AKwifpMjDM="
+      alt="Image could not load"
+      height="200"
+      width="200"
+    />
 
-
-
-
-
-
-
-
-</body>
-
+    <br /><br /><br />
+    <hr />
+    <br />
+  </body>
 </html>
