--- a/01_HTML/04listsTables.html
+++ b/01_HTML/04listsTables.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Table and Lists</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <ul type="square">
-        <!-- three types in ul : disc, square, circle -->
-        <li>This is first item of unorderd list</li>
-        <li>This is second item of unorderd list</li>
-        <li>This is third item of unorderd list</li>
+      <!-- three types in ul : disc, square, circle -->
+      <li>This is first item of unorderd list</li>
+      <li>This is second item of unorderd list</li>
+      <li>This is third item of unorderd list</li>
 
-        <!-- right click and choose format document to format code.  -->
-        <!-- nesting list  -->
-        <li>
-            <ul type="disc">
-                <li>another one</li>
-                <li>another 2</li>
-                <li>another 3</li>
-            </ul>
-        </li>
-        <p>now write some list but not nested like above 3.</p>
+      <!-- right click and choose format document to format code.  -->
+      <!-- nesting list  -->
+      <li>
         <ul type="disc">
-            <li>not nested 1</li>
-            <li>not nested 2</li>
-            <li>not nested 3</li>
+          <li>another one</li>
+          <li>another 2</li>
+          <li>another 3</li>
         </ul>
+      </li>
+      <p>now write some list but not nested like above 3.</p>
+      <ul type="disc">
+        <li>not nested 1</li>
+        <li>not nested 2</li>
+        <li>not nested 3</li>
+      </ul>
     </ul>
 
     <ol type="I">
-        <!-- five types in ol: 1, A, a, I, i  -->
-        <li>This is first item of orderd list</li>
-        <li>This is second item of orderd list</li>
-        <li>This is third item of orderd list</li>
+      <!-- five types in ol: 1, A, a, I, i  -->
+      <li>This is first item of orderd list</li>
+      <li>This is second item of orderd list</li>
+      <li>This is third item of orderd list</li>
     </ol>
 
     <!-- Tables...  -->
@@ -45,42 +44,37 @@
     <!-- tbody<tr<td  -->
     <!-- 1 tr = 1 row  -->
     <!-- thead and tbody and tfoot is used for indexing and for coders to undestand which element is what  -->
-    <h3>TABLE </h3>
+    <h3>TABLE</h3>
     <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Student ID</th>
-                <th>Skill</th>
-            </tr>
-
-        </thead>
-        <tbody>
-            <tr>
-                <td>Mainul</td>
-                <td>17ETE031</td>
-                <td>Web developer</td>
-            </tr>
-            <tr>
-                <td>Tufayel</td>
-                <td>17ETE041</td>
-                <td>Wordpress Expert</td>
-            </tr>
-            <tr>
-                <td>Shohan</td>
-                <td>17ETE021</td>
-                <td>Android Developer</td>
-            </tr>
-            <tr>
-                <td>Rahat</td>
-                <td>17ETE035</td>
-                <td> Full Stack Web developer</td>
-            </tr>
-
-        </tbody>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Student ID</th>
+          <th>Skill</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Mainul</td>
+          <td>17ETE031</td>
+          <td>Web developer</td>
+        </tr>
+        <tr>
+          <td>Tufayel</td>
+          <td>17ETE041</td>
+          <td>Wordpress Expert</td>
+        </tr>
+        <tr>
+          <td>Shohan</td>
+          <td>17ETE021</td>
+          <td>Android Developer</td>
+        </tr>
+        <tr>
+          <td>Rahat</td>
+          <td>17ETE035</td>
+          <td>Full Stack Web developer</td>
+        </tr>
+      </tbody>
     </table>
-
-
-</body>
-
+  </body>
 </html>
