--- a/02_CSS/01 CSS Selectors/01selectors.html
+++ b/02_CSS/01 CSS Selectors/01selectors.html
@@ -1,62 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>CSS Selectors</title>
     <style>
-        /* There are 4 types of selectors in CSS: 
-        - element, id, class and grouped selectors. */
+      /* There are 3 types of selectors in CSS: 
+        - 1. simple selector: used to select an element
+            they are 3 type
+            i. element / type / tag selector
+            ii. class selector
+            iii. id selector
+          2. Pseudo-class selector: used to style a selector in its special state
+          3. Multiple/Grouped selector: */
 
-        /* element selector */
-        p {
-            border: 2px solid violet;
-        }
+      /* element selector */
+      p {
+        border: 2px solid violet;
+      }
 
+      /* id selector */
+      #firstPara {
+        color: green;
+      }
 
+      /* class selector */
+      .redElement {
+        color: red;
+      }
 
-        /* id selector */
-        #firstPara {
-            color: green;
-        }
+      .bgYellow {
+        background-color: yellow;
+      }
 
-        /* class selector */
-        .redElement {
-            color: red;
-        }
-
-        .bgYellow {
-            background-color: yellow;
-        }
-
-        /* grouping selector */
-        span,
-        footer {
-            background-color: pink;
-        }
+      /* grouping selector */
+      span,
+      footer {
+        background-color: pink;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h3>CSS Selectors</h3>
-    <p id="firstPara">This is simple paragraph to demonstrate how to use CSS Selectors and how it works</p>
-    <p id="secondPara" class="redElement bgYellow">This is number two paragraph to demonstrate how to use CSS Selectors
-        and how it works</p>
+    <p id="firstPara">
+      This is simple paragraph to demonstrate how to use CSS Selectors and how
+      it works
+    </p>
+    <p id="secondPara" class="redElement bgYellow">
+      This is number two paragraph to demonstrate how to use CSS Selectors and
+      how it works
+    </p>
 
     <div>
-        <p>This is number 3 paragraph inside a div block to demonstrate how to use CSS Selectors and how it works</p>
-        <span>This is a span element.</span>
+      <p>
+        This is number 3 paragraph inside a div block to demonstrate how to use
+        CSS Selectors and how it works
+      </p>
+      <span>This is a span element.</span>
 
-        <!-- will use grouping to add css into span and footer  -->
-
+      <!-- will use grouping to add css into span and footer  -->
     </div>
 
-
-
-    <footer>This is the footer </footer>
-
-</body>
-
+    <footer>This is the footer</footer>
+  </body>
 </html>
